added nugets axios, moment, hook

--- a/meetup/src/styles/layout.scss
+++ b/meetup/src/styles/layout.scss
@@ -1,6 +1,6 @@
 @import "constants";
-@import "lecture";
-@import "meetupDetails";
+//@import "lecture";
+//@import "meetupDetails";
 @import "meetupList";
 
 form {
